--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12"
   }
 }
