--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "In this website i'll list obbies from each country, ALL of the Back-End and Front-End are all completely made by one person (me), However if you wanted to help me with data you can send me a dm in Discord : ptxc ; and you could also join our discord server ([Here](https://discord.gg/XXCk8EDF6r)), Thanks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +15,9 @@
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.9.0",
-    "@vercel/speed-insights": "^1.0.12"
+    "@vercel/speed-insights": "^1.0.12",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
