vercel.json source fix

--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,11 @@
             "destination": "/.well-known/discord"
         },
         {
-            "source": "/public/eio-list-editor",
+            "source": "/eio-list-editor",
             "destination": "/CUmENgiZiU1ZiFGm4lik"
         },
         {
-            "source": "/public/voc-list-editor",
+            "source": "/voc-list-editor",
             "destination": "/eMv84e9xbpzigfyifDoa"
         }
     ]
