vercel.json another fix v2

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
             "destination": "/.well-known/discord"
         },
         {
-            "source": "/CUmENgiZiU1ZiFGm4lik/eio-list-editor",
+            "source": "/CUmENgiZiU1ZiFGm4lik",
             "destination": "/eio-list-editor"
         },
         {
