--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     ],
     "headers": [
         {
-            "source": "/api/(.*)",
+            "source": "/(.*)",
             "headers": [
                 {
                     "key": "Access-Control-Allow-Credentials",
