vercel.json update, added savejson API

--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
     ],
     "headers": [
         {
-            "source": "/public/(.*)",
+            "source": "/api/(.*)",
             "headers": [
                 {
                     "key": "Access-Control-Allow-Credentials",
