--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,13 @@
             "destination": "/voc-list-editor"
         },
         {
+            "source": "/rgDx3q1Xoo3iNLE",
+            "destination": "/koc-list-editor"
+        },{
+            "source": "/BcGgN1pHw2587WB",
+            "destination": "/mys-list-editor"
+        },
+        {
             "source": "/api/:path*",
             "destination": "https://pi3etbntstmdvlu5.public.blob.vercel-storage.com/:path*"
         }
