--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,6 @@
     "cleanUrls": true,
     "rewrites": [
         {
-            "source": "/.well-known/discord",
-            "destination": "/.well-known/discord"
-        },
-        {
             "source": "/CUmENgiZiU1ZiFGm4lik",
             "destination": "/eio-list-editor"
         },
@@ -29,6 +25,33 @@
         {
             "source": "/api/:path*",
             "destination": "https://pi3etbntstmdvlu5.public.blob.vercel-storage.com/:path*"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/koc-list-editor",
+            "status": 404,
+            "dest": "/404"
+        },
+        {
+            "src": "/eio-list-editor",
+            "status": 404,
+            "dest": "/404"
+        },
+        {
+            "src": "/ukr-list-editor",
+            "status": 404,
+            "dest": "/404"
+        },
+        {
+            "src": "/mys-list-editor",
+            "status": 404,
+            "dest": "/404"
+        },
+        {
+            "src": "/voc-list-editor",
+            "status": 404,
+            "dest": "/404"
         }
     ],
     "headers": [
