--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.23.4",
     "@vercel/postgres": "^0.9.0",
